Added some code to convert calibration data

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+* implement Settings/Clear, Settings/Apply
+
+* implement Calibration/Apply, Calibration/Clear, Calibration/Refresh
+
 * axis names very buggy:
   - ABS_RZ instead of ABS_RUDDER (Sidewinder2)
   - ABS_RZ,ABS_THROTTLE instead of ABS_RX,ABS_RY (Thrustmaster gamepad)
@@ -11,11 +15,6 @@
   bcdDevice            1.05
   iManufacturer           1 Microsoft<AE>
   iProduct                2 Microsoft<AE> SideWinder<AE> Game Pad USB
-
-* use Table for calibration widget:
-   Center Min/Max   Range Min/Max
-   [    ]  [    ]    [   ]  [  ]
-   ...
 
 * provide additional support for SDL and evdev devices
 
