--- a/TODO
+++ b/TODO
@@ -3,29 +3,28 @@ Pre Release Testing:
 
 * check the version number
 
-VERSION="0.4.6"
+VERSION="0.1.0"
 TAG="v${VERSION}"
 git tag -s  "${TAG}" -m "jstest-gtk ${TAG}" 
-git-archive --format=tar --prefix="jstest-gtk-${VERSION}/" ${TAG} | bzip2 -c > /tmp/jstest-gtk-${VERSION}.tar.bz2
+git archive --format=tar --prefix="jstest-gtk-${VERSION}/" ${TAG} | bzip2 -c > /tmp/jstest-gtk-${VERSION}.tar.bz2
 git push --tags
 
 ==========
 [[ TODO ]]
 ==========
 
-* fix copyright header
+* [CLEANUP] center font in ButtonWidget (current way is a dirty hack)
 
-* center font in ButtonWidget (current way is a dirty hack)
+* [FEATURE] axis names (ABS_X, ...) should be used instead of raw axis numbers
+  to guess which layout is correct, also the layout should be properly
+  labeled
 
-* AxesDisplay should use ABS_X/Y and friends instead of raw axis
-  numbers to guess which layout is correct
-
-* add some more checks to catch invalid button/axis mappings supplied
+* [BUG] add some more checks to catch invalid button/axis mappings supplied
   to the joydev interface
 
-* swapping axis must also swap calibration data
+* [BUG] swapping axis must also swap calibration data
 
-* provide additional support for SDL and evdev devices
+* [FEATURE] provide additional support for SDL and evdev devices
 
 
 =================================
