--- a/TODO
+++ b/TODO
@@ -13,14 +13,14 @@ git push --tags
 [[ TODO ]]
 ==========
 
-- A simple authomatic calibration method
-- Possibility of activate noise reduction in joystick axis
-- Load and save presets in devices, and to load them automatically
-when you connect the device.
+* [FEATURE] A simple authomatic calibration method
 
-* Watch teh syste, maybe bein in systray, to protect the device from
-  accidental reconfiguration by another application. [unlikely, as
-  that would mean polling]
+* [FEATURE] Possibility of activate noise reduction in joystick axis
+  (read only field, but can't hurd to have it, in case any app wants
+  to play with it)
+
+* [FEATURE] Load and save presets in devices, and to load them automatically
+  when you connect the device.
 
 * [CLEANUP] sync evtest_helper.?pp, make sure no boost dependency is
   present
@@ -42,6 +42,11 @@ when you connect the device.
 =================================
 [[ Possible Future Improvments ]]
 =================================
+
+* [FEATURE] Watch teh system, maybe being in systray, to protect the
+  device from accidental reconfiguration by another
+  application. (unlikely, as that would mean polling and other then
+  jscalibrator there isn't much to mess up joystick calibration)
 
 * draw calibration icon
 
