Some typo fixes in the man-page

--- a/data/jstest-gtk.1
+++ b/data/jstest-gtk.1
@@ -7,7 +7,7 @@ jstest\-gtk \- joystick testing and configuration tool
 .SH "SYNOPSIS"
 .B jstest\-gtk
 .RI [ options ] ...
-.RI [ device ] " files" ...
+.RI [ device ] ...
 .SH "DESCRIPTION"
 jstest\-gtk is a simple joystick tester based on Gtk+. It provides a list of attached joysticks, a way to display which buttons and axis are pressed, a way to remap axis and buttons and a way to calibrate your joystick.
 
@@ -15,7 +15,7 @@ Even when your joystick is working mostly fine, you might want to give it a try,
 .SH "USAGE"
 jstest\-gtk is mainly a graphical interface to check that your joysticks and pads work properly. You can find precise information on each axis, you can optionally recalibrate it and also change the mapping. 
 
-If you run the program without parameters, you will get a window showing all the joystick devices in your system (there can be more than one). When you double click on onw of them, you will get a newer window with detailed information about its axis and buttons.
+If you run the program without parameters, you will get a window showing all the joystick devices in your system (there can be more than one). When you double click on one of them, you will get a new window with detailed information about its axes and buttons.
 
 There are two buttons in the detailed window called "Mapping" adn "Calibration", that allows you to reconfigurate the device.
 
