XMLParser now working

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 jstest-gtk 0.1.1 (2009-05-??)
 =============================
 
-* removed accidental boost dependency
+* removed accidental boost and gtkglextmm-1.2 dependencies
 * improved support for PS3 controller and other with huge axis/button counts
 * implemented calibration wizard
 * added man-page
