Updated email, grumbel@gmx.de -> grumbel@gmail.com

--- a/data/jstest-gtk.1
+++ b/data/jstest-gtk.1
@@ -36,7 +36,7 @@ Display version information and exit
 .SH "SEE ALSO"
 You can find more information if you visit http://pingus.seul.org/~grumbel/jstest\-gtk/
 .SH "AUTHOR"
-jstest\-gtk was written by Ingo Ruhnke <grumbel@gmx.de>.
+jstest\-gtk was written by Ingo Ruhnke <grumbel@gmail.com>.
 .PP 
 This manual page was written by Miriam Ruiz <little_miry@yahoo.es>,
 for the Debian project (and may be used by others).
